--- a/cvli-license.html
+++ b/cvli-license.html
@@ -70,7 +70,7 @@
       </div><!-- /.container-fluid -->
     </nav>
   </div>
-  
+
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12 col-sm-4 col-md-3">
@@ -82,23 +82,25 @@
             <br> should not perish but have eternal life.
             <br>&mdash;John 3:16
           </p>
-          <img src="images/jesus_bars.JPG" alt="Sketch of Jesus wearing crown of thorns with shadows of prison bars falling across his face." />
+          <img src="images/jesus_bars.JPG" class="img-responsive side-image" alt="Sketch of Jesus wearing crown of thorns with shadows of prison bars falling across his face." />
         </aside>
       </div>
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
         <h1 class="text-center ftg">The CVLI License</h1>
-        <p class="bring-down">
-          The CVLI License, which allows the Prisons at MCI and OCI
-          to view Movies, is held and paid for by The Saint Dismas Foundation.
+        <p>
+          The CVLI License, is a license which allows inmates in the prison chapels at Martin CI and Okeechobee CI to view Movies. The license is held by and paid for each year by The Saint Dismas Prison Ministry Foundation.
+        </p>
+        <p>
+          Through an agreement with studios and producers, the CVLI Church Video License provides legal coverage for churches and for other ministry organizations to show motion pictures and other audiovisual programs intended for personal, private use only (“Videos”). 
         </p>
       </div>
     </div>
   </div>
-  <footer class="">
+  <footer>
     <div class="container">
       <div class="row">
-        <div class="col-xs-4">
-          <p class="footer-left">
+        <div class="hidden-xs col-sm-4 col-md-4">
+          <p>
             Saint Dismas Prison Ministry Foundation
             <br> 1701 Indian Creek Parkway
             <br> Jupiter, Florida 33458
@@ -106,11 +108,20 @@
             <br>
           </p>
         </div>
-        <div class="col-xs-4 text-center">
-          <img src="images/logo_small.png" class="logo" alt="Saint Dismas Prison Ministry Logo" />
+        <div class="col-xs-12 visible-xs text-center">
+          <p>
+            Saint Dismas Prison Ministry Foundation
+            <br> 1701 Indian Creek Parkway
+            <br> Jupiter, Florida 33458
+            <br> 561-662-0832
+            <br>
+          </p>
         </div>
-        <div class="col-xs-4">
-          <p class="text-right footer-right">
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <p>
             Copyright &copy; 2015
             <br>
             <br>
@@ -120,6 +131,7 @@
       </div>
     </div>
   </footer>
+
   <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
