--- a/farm-program.html
+++ b/farm-program.html
@@ -70,28 +70,10 @@
       </div><!-- /.container-fluid -->
     </nav>
   </div>
-  
+
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-12 col-sm-8 col-sm-push-4 col-md-9 col-md-push-3 main-text">
-        <h1 class="text-center ftg">Farm Program</h1>
-        <p>
-          This is a chapel program that Saint Dismas not only sponsors but also started. Saint Dismas Prison Ministry provided all the initial tools, hoses, seed, and boots, and even supplied lemonade to help combat the heat and sweat of a hard day's work.
-        </p>
-        <p>
-          In addition, The Foundation published and printed farm manuals written by inmates to be used in the trainin classes.
-        </p>
-        <p>
-          The farm supplies the prison commissary with thousands of pounds of fresh produce at no cost to the prison. <span class="cursive">However, most important, it gives the inmate farm workers a sense of pride in accomplishment as they participate with God in His creation.</span>
-        </p>
-        <img src="images/farm.JPG" class="main-column-img center-block responsive" alt="Deacon holding vegetables just harvested by the inmates working in the background.">
-
-        <img src="images/farm3.jpeg" class="main-column-img center-block responsive" alt="Group picture of inmates working in the farm field and displaying the produce they have harvested.">
-
-        <img src="images/farm2.JPG" class="main-column-img center-block responsive" alt="Group picture of inmates, Deacon, and other officials displaying the fruits of their labor.">
-
-      </div>
-      <div class="col-xs-12 col-sm-4 col-sm-pull-8 col-md-3 col-md-pull-9">
+      <div class="col-xs-12 visible-xs">
         <aside class="text-center">
           <p>
             When Jesus was berated for
@@ -102,7 +84,39 @@
             <br>but sinners." &mdash;Mark 2:17
             <br>
           </p>
-          <img src="images/farm-produce.jpg" class="side-image bring-down img-responsive" alt="Tomatos in a white bowl, along with lettuce, all grown by the inmates working with the Saint Dismas Prison Ministry." />
+          <img src="images/farm-produce.jpg" class="side-image img-responsive" alt="Tomatos in a white bowl, along with lettuce, all grown by the inmates working with the Saint Dismas Prison Ministry." />
+        </aside>
+      </div>
+      <div class="col-xs-12 col-sm-8 col-sm-push-4 col-md-9 col-md-push-3 main-text">
+        <h1 class="text-center ftg">Farm Program</h1>
+        <p>
+          This is a chapel program that Saint Dismas not only sponsors but also started. The Saint Dismas Prison Ministry Foundation provided all the initial tools, hoses, seed, and boots and even lemonade to help combat the heat and sweat of a hard day's work.
+        </p>
+        <p>
+          In addition, The Foundation published and printed a farm manual entitled <i>MEETING THE DEMAND INTENSIVELY</i>, written by inmates to be used in the training classes.
+        </p>
+        <p>
+          The farm supplies the prison commissary with thousands of pounds of fresh produce at no cost to the prison. <span class="cursive">However, most important, it gives the inmate farm workers a sense of pride in accomplishment as they participate with God in His creation. </span>
+        </p>
+        <img src="images/farm.JPG" class="main-column-img center-block responsive" alt="Deacon holding vegetables just harvested by the inmates working in the background.">
+
+        <img src="images/farm3.jpeg" class="main-column-img center-block responsive" alt="Group picture of inmates working in the farm field and displaying the produce they have harvested.">
+
+        <img src="images/farm2.JPG" class="main-column-img center-block responsive" alt="Group picture of inmates, Deacon, and other officials displaying the fruits of their labor.">
+
+      </div>
+      <div class="col-xs-12 col-sm-4 col-sm-pull-8 col-md-3 col-md-pull-9">
+        <aside class="text-center">
+          <p class="hidden-xs">
+            When Jesus was berated for
+            <br>eating with tax collectors and sinners,
+            <br>he answered, "It is not the healthy
+            <br>who need a doctor, but the sick.
+            <br>I have not come to call the righteous,
+            <br>but sinners." &mdash;Mark 2:17
+            <br>
+          </p>
+          <img src="images/farm-produce.jpg" class="side-image img-responsive hidden-xs" alt="Tomatos in a white bowl, along with lettuce, all grown by the inmates working with the Saint Dismas Prison Ministry." />
           <img src="images/squash.jpeg" class="side-image img-responsive" alt="Bunch of bright yellow squash arranged on a green cloth." />
           <img src="images/produce.jpeg" class="side-image img-responsive" alt="Group of vegetables (orange pepper, corn in husk, cucumber, onion) arranged on a glass table." />
           <img src="images/tomatos.jpeg" class="side-image img-responsive" alt="Group of vegetables (orange pepper, corn in husk, cucumber, onion) arranged on a glass table." />
@@ -111,12 +125,11 @@
       </div>
     </div>
   </div>
-
-  <footer class="">
+  <footer>
     <div class="container">
       <div class="row">
-        <div class="col-xs-4">
-          <p class="footer-left">
+        <div class="hidden-xs col-sm-4 col-md-4">
+          <p>
             Saint Dismas Prison Ministry Foundation
             <br> 1701 Indian Creek Parkway
             <br> Jupiter, Florida 33458
@@ -124,11 +137,20 @@
             <br>
           </p>
         </div>
-        <div class="col-xs-4 text-center">
-          <img src="images/logo_small.png" class="logo" alt="Saint Dismas Prison Ministry Logo" />
+        <div class="col-xs-12 visible-xs text-center">
+          <p>
+            Saint Dismas Prison Ministry Foundation
+            <br> 1701 Indian Creek Parkway
+            <br> Jupiter, Florida 33458
+            <br> 561-662-0832
+            <br>
+          </p>
         </div>
-        <div class="col-xs-4">
-          <p class="text-right footer-right">
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <p>
             Copyright &copy; 2015
             <br>
             <br>
@@ -138,6 +160,7 @@
       </div>
     </div>
   </footer>
+
   <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
