--- a/inmate-aid.html
+++ b/inmate-aid.html
@@ -70,7 +70,7 @@
       </div><!-- /.container-fluid -->
     </nav>
   </div>
-  
+
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12 col-sm-4 col-md-3">
@@ -90,16 +90,16 @@
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
         <h1 class="text-center ftg">Inmate Aid</h1>
         <h3 class="ftg">Ingident Funds</h2>
-        <p class="bring-down">
-          The Foundation makes direct deposits to the Inmate Trust Fund in the name of qualified indigent inmates (usually $10) to enable them to purchase personal hygeiene supplies (deodorant, toothpaste, shampoo, etc.) which are not supplied by the prison.
+        <p>
+          The Foundation makes direct deposits to the Inmate Trust Fund in the name of qualified indigent inmates (usually $10) to enable them to purchase personal hygiene supplies (deodorant, toothpaste, shampoo etc.) which are not supplied by the prison.
         </p>
         <h3 class="ftg">EOS Packages</h2>
         <p>
-          This program provides new clothing and shoes purchased to the inmate’s measurements. A bo is provided to the indigent inmates on thier EOS (end of sentence) date. These inmates don't necessarily receive "fresh start" funds. since its inception, 75 inmates have received EOS packages.
+          This program provides new clothing and shoes purchased to the inmate’s measurements. A box is provided to the indigent inmate on their EOS (end of sentence) date.
         </p>
         <h3 class="ftg">Fresh Start Program</h2>
         <p>
-          This program is for ex-offenders who have no resources, have a reasonable chance of success on the outside, and are recommended to us for support. These former inmates receive funds and an EOS package to help them get started. Assistance sometimes includes finding housing when possible and payment their first month's rent.
+          This program is for ex-offenders who have no resources, have a reasonable chance of success on the outside, and are recommended to us for support. These former inmates receive funds and an EOS package to help them get started. Assistance sometimes includes finding housing when possible and payment of the first month's rent.
         </p>
         <h3 class="ftg">Family Assistance</h2>
         <p>
@@ -107,17 +107,20 @@
         </p>
         <h3 class="ftg">Educational and Vocational</h2>
         <p>
-          The Saint Dismas Foundation has paid education or training fees for worthy inmates who have a reasonable chance of success. The most frequent and beneficial has been the water treatment program through the University of California. All are without cost to the inmate student. With the permission of prison officials, we routinely supply Bibles religious DVD's and other religious materials to inmates through the Chapel.
+          The Saint Dismas Foundation has paid education or training fees for worthy inmates who have a reasonable chance of success. The most frequent and beneficial programs have been the water treatment program through the University of California, pesticide and fertilizer application courses and college credit courses (correspondence).
+        </p><br>
+        <p>
+          All are without cost to the inmate student. With the permission of prison officials, we routinely supply Bibles religious DVD's and other religious materials to inmates through the Chapel.
         </p>
         <img src="images/confirmation.JPG" class="main-column-img center-block responsive" alt="Two champlains and two prisoners celebrating a confirmation.">
       </div>
     </div>
   </div>
-  <footer class="">
+  <footer>
     <div class="container">
       <div class="row">
-        <div class="col-xs-4">
-          <p class="footer-left">
+        <div class="hidden-xs col-sm-4 col-md-4">
+          <p>
             Saint Dismas Prison Ministry Foundation
             <br> 1701 Indian Creek Parkway
             <br> Jupiter, Florida 33458
@@ -125,11 +128,20 @@
             <br>
           </p>
         </div>
-        <div class="col-xs-4 text-center">
-          <img src="images/logo_small.png" class="logo" alt="Saint Dismas Prison Ministry Logo" />
+        <div class="col-xs-12 visible-xs text-center">
+          <p>
+            Saint Dismas Prison Ministry Foundation
+            <br> 1701 Indian Creek Parkway
+            <br> Jupiter, Florida 33458
+            <br> 561-662-0832
+            <br>
+          </p>
         </div>
-        <div class="col-xs-4">
-          <p class="text-right footer-right">
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <p>
             Copyright &copy; 2015
             <br>
             <br>
@@ -139,6 +151,7 @@
       </div>
     </div>
   </footer>
+
   <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
