--- a/mandate.html
+++ b/mandate.html
@@ -70,7 +70,7 @@
       </div><!-- /.container-fluid -->
     </nav>
   </div>
-  
+
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12 col-sm-4 col-md-3">
@@ -95,15 +95,14 @@
           And because we, the church, are now His representatives on earth, prison is where we should be as well — calling the sick to the healing touch of  Jesus the Savior.    Still recognizing in those inmates, the dignity of God’s creation, no matter how far they have fallen; trusting that no one — NO ONE —is beyond Christ’s power to love , forgive and redeem.
         </p>
         <img src="images/hopeless_no_quote.jpg" class="main-column-img center-block responsive" alt="Inmate in despair, sitting in dark cell with head held in hands.">
-
       </div>
     </div>
   </div>
-  <footer class="">
+  <footer>
     <div class="container">
       <div class="row">
-        <div class="col-xs-4">
-          <p class="footer-left">
+        <div class="hidden-xs col-sm-4 col-md-4">
+          <p>
             Saint Dismas Prison Ministry Foundation
             <br> 1701 Indian Creek Parkway
             <br> Jupiter, Florida 33458
@@ -111,11 +110,20 @@
             <br>
           </p>
         </div>
-        <div class="col-xs-4 text-center">
-          <img src="images/logo_small.png" class="logo" alt="Saint Dismas Prison Ministry Logo" />
+        <div class="col-xs-12 visible-xs text-center">
+          <p>
+            Saint Dismas Prison Ministry Foundation
+            <br> 1701 Indian Creek Parkway
+            <br> Jupiter, Florida 33458
+            <br> 561-662-0832
+            <br>
+          </p>
         </div>
-        <div class="col-xs-4">
-          <p class="text-right footer-right">
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <p>
             Copyright &copy; 2015
             <br>
             <br>
@@ -125,6 +133,7 @@
       </div>
     </div>
   </footer>
+  
   <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
