--- a/art-program.html
+++ b/art-program.html
@@ -92,10 +92,10 @@
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
         <h1 class="text-center ftg">Art Program</h1>
         <p class="bring-down">
-          God has gifted some inmates with art talent. It has been said, "When we make art, we become the art we are making . . . it’s kind of a circle!!!”
+          God has gifted some inmates with art talent. In many cases it is hidden !!                        It has been said, "When we make art, we become the art we are making . . . it’s kind of a circle!!!”  In other words, the inmate artist works on the art and the art works on the inmate.
         </p>
         <p>
-          The inmate artist works on the art and the art works on the inmate. It encourages self-expression, reduces anger and frustration, helps to control aggression, combats depression and helps to heal ones brokenness. Most important, however, it gives the inmate the realization and appreciation of God’s gift of talent to the inmate artist.
+          Art encourages self-expression, reduces anger and frustration, helps to control aggression, combats depression and helps to heal ones brokenness. Most important, however, it gives the inmate the realization and appreciation of God’s gift of talent to him and boosts the inmate's self esteem.
         </p>
         <img src="images/sculpture.JPG" class="main-column-img center-block img-responsive" alt="Sculpture of Jesus's head, created by an inmate in the art program.">
         <figcaption class="cursive text-center">"Ball Field" Clay</figcaption>
