--- a/creed.html
+++ b/creed.html
@@ -69,7 +69,7 @@
         </div><!-- /.container-fluid -->
       </nav>
     </div>
-    
+
     <div class="container-fluid">
       <div class="row">
         <div class="col-xs-12 col-sm-4 col-md-3">
@@ -82,7 +82,7 @@
               <br>&mdash;Matthew 25:36, 40
               <br>
             </p>
-            <img src="images/jesus_sketch.gif" alt="Artist rendering of Jesus in Prison, and the cell being locked." />
+            <img src="images/jesus_sketch.gif" class="img-responsive side-image" alt="Artist rendering of Jesus in Prison, and the cell being locked." />
           </aside>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-9 main-text">
@@ -103,11 +103,12 @@
         </div>
       </div>
     </div>
-    <footer class="">
+
+    <footer>
       <div class="container">
         <div class="row">
-          <div class="col-xs-4">
-            <p class="footer-left">
+          <div class="hidden-xs col-sm-4 col-md-4">
+            <p>
               Saint Dismas Prison Ministry Foundation
               <br> 1701 Indian Creek Parkway
               <br> Jupiter, Florida 33458
@@ -115,11 +116,20 @@
               <br>
             </p>
           </div>
-          <div class="col-xs-4 text-center">
-            <img src="images/logo_small.png" class="logo" alt="Saint Dismas Prison Ministry Logo" />
+          <div class="col-xs-12 visible-xs text-center">
+            <p>
+              Saint Dismas Prison Ministry Foundation
+              <br> 1701 Indian Creek Parkway
+              <br> Jupiter, Florida 33458
+              <br> 561-662-0832
+              <br>
+            </p>
           </div>
-          <div class="col-xs-4">
-            <p class="text-right footer-right">
+          <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+            <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+          </div>
+          <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+            <p>
               Copyright &copy; 2015
               <br>
               <br>
@@ -129,6 +139,8 @@
         </div>
       </div>
     </footer>
+
+
     <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
