--- a/dismas.html
+++ b/dismas.html
@@ -94,23 +94,23 @@
         <p class="cursive">
           “Two others also, who were criminals, were led away to be put to death with [Jesus]. . . . One of the criminals who were hanged railed at him, saying, ‘Are you not the Christ? Save yourself and us!’ But the other rebuked him, saying, ‘Do you not fear God, since you are under the same sentence of condemnation? And we indeed justly; for we are receiving the due reward of our deeds; but this man has done nothing wrong.’ And he said, ‘Jesus, remember me when you come into your kingdom.’ And he said to him, ‘Truly, I say to you, today you will be with me in paradise’” (Luke 23:32-43).
         </p>
-        <img src="images/dismas-cross.jpg" class="main-column-img center-block responsive" alt="Artwork of a close up of two hands on separate crosses, Dismas's on the left, Jesus's, with a nail driven through the palm and blood streaming out of the wound, on the right. Their fingers reach for each other.">
         <p>
           This is all the Bible tells us about the “penitent thief,” but several points are clear. First, he is a criminal whose crucifixion for his actions is just. Second, he is contrite. Third, he believes in Jesus. And finally, Jesus’ unlimited mercy is clearly shown as he affirms his salvation. There is no indication that this man was a Christian, yet Jesus assures him that he is saved and even promises (in most Bible translations) that he will go to heaven that very day.
         </p>
         <p>
           Although not formally canonized by the Catholic Church, it is believed that he was canonized by Christ himself at that moment. He is venerated as "St. Dismas" .  In the Roman Catholic tradition, His feast is celebrated on March 25.
         </p>
+        <img src="images/dismas-cross.jpg" class="main-column-img center-block responsive" alt="Artwork of a close up of two hands on separate crosses, Dismas's on the left, Jesus's, with a nail driven through the palm and blood streaming out of the wound, on the right. Their fingers reach for each other.">
       </div>
     </div>
   </div>
 
 
-  <footer class="">
+  <footer>
     <div class="container">
       <div class="row">
-        <div class="col-xs-4">
-          <p class="footer-left">
+        <div class="hidden-xs col-sm-4 col-md-4">
+          <p>
             Saint Dismas Prison Ministry Foundation
             <br> 1701 Indian Creek Parkway
             <br> Jupiter, Florida 33458
@@ -118,11 +118,20 @@
             <br>
           </p>
         </div>
-        <div class="col-xs-4 text-center">
-          <img src="images/logo_small.png" class="logo" alt="Saint Dismas Prison Ministry Logo" />
+        <div class="col-xs-12 visible-xs text-center">
+          <p>
+            Saint Dismas Prison Ministry Foundation
+            <br> 1701 Indian Creek Parkway
+            <br> Jupiter, Florida 33458
+            <br> 561-662-0832
+            <br>
+          </p>
         </div>
-        <div class="col-xs-4">
-          <p class="text-right footer-right">
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <p>
             Copyright &copy; 2015
             <br>
             <br>
@@ -132,6 +141,7 @@
       </div>
     </div>
   </footer>
+  
   <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
