--- a/greeting-cards.html
+++ b/greeting-cards.html
@@ -88,20 +88,20 @@
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
         <h1 class="text-center ftg">Greeting Card Program</h1>
         <p class="bring-down">
-          Prison inmates who are serving long sentences often lose family ties and meaningful friendships over the decades that they are incarcerated. Many never even receive mail.
+          Prison inmates who are serving long sentences often lose family ties and meaningful friendships over the decades that they are incarcerated. Many never ever receive mail.
         </p>
         <p>
-          Recognizing the need to encourage communication and help make it possible, the Saint Dismas Foundation was instrumental in starting a free greeting card program many years ago. Since 2006, approximately 100,000 cards have been provided free to any inmate that requests them from the Chaplain.
+          Recognizing the need to encourage communication and to help make it possible, the Saint Dismas Foundation was instrumental in starting a free greeting card program many years ago. Since it's inception well over 100,000 cards have been provided free to any inmate that requests them from the Chaplain. 
         </p>
         <img src="images/prison-block.jpg" class="main-column-img center-block responsive" alt="Black and white image of long prison block, empty cells all along the sides.">
       </div>
     </div>
   </div>
-  <footer class="">
+  <footer>
     <div class="container">
       <div class="row">
-        <div class="col-xs-4">
-          <p class="footer-left">
+        <div class="hidden-xs col-sm-4 col-md-4">
+          <p>
             Saint Dismas Prison Ministry Foundation
             <br> 1701 Indian Creek Parkway
             <br> Jupiter, Florida 33458
@@ -109,11 +109,20 @@
             <br>
           </p>
         </div>
-        <div class="col-xs-4 text-center">
-          <img src="images/logo_small.png" class="logo" alt="Saint Dismas Prison Ministry Logo" />
+        <div class="col-xs-12 visible-xs text-center">
+          <p>
+            Saint Dismas Prison Ministry Foundation
+            <br> 1701 Indian Creek Parkway
+            <br> Jupiter, Florida 33458
+            <br> 561-662-0832
+            <br>
+          </p>
         </div>
-        <div class="col-xs-4">
-          <p class="text-right footer-right">
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <p>
             Copyright &copy; 2015
             <br>
             <br>
@@ -123,6 +132,7 @@
       </div>
     </div>
   </footer>
+
   <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
