--- a/literacy-program.html
+++ b/literacy-program.html
@@ -88,7 +88,7 @@
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
         <h1 class="text-center ftg">The Literacy Program</h1>
         <p class="bring-down">
-          Two thirds of the inmate population is functionally illiterate. Doing time is difficult enough and without the ability to read the bible or other books or even letters from family members it is almost impossible!!
+          Two thirds of the inmate population is functionally illiterate. Doing time is difficult enough and without the ability to read the bible, other books or even letters from family members it is almost impossible!!
         </p>
         <p>
           We use the Laubach method by New Reader Press. It is a time-tested method that has taught millions of adults to read and is ideal for adult learners who have little or no reading skills and require a uniform, step-by-step approach to reading.
@@ -98,11 +98,11 @@
       </div>
     </div>
   </div>
-  <footer class="">
+  <footer>
     <div class="container">
       <div class="row">
-        <div class="col-xs-4">
-          <p class="footer-left">
+        <div class="hidden-xs col-sm-4 col-md-4">
+          <p>
             Saint Dismas Prison Ministry Foundation
             <br> 1701 Indian Creek Parkway
             <br> Jupiter, Florida 33458
@@ -110,11 +110,20 @@
             <br>
           </p>
         </div>
-        <div class="col-xs-4 text-center">
-          <img src="images/logo_small.png" class="logo" alt="Saint Dismas Prison Ministry Logo" />
+        <div class="col-xs-12 visible-xs text-center">
+          <p>
+            Saint Dismas Prison Ministry Foundation
+            <br> 1701 Indian Creek Parkway
+            <br> Jupiter, Florida 33458
+            <br> 561-662-0832
+            <br>
+          </p>
         </div>
-        <div class="col-xs-4">
-          <p class="text-right footer-right">
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <p>
             Copyright &copy; 2015
             <br>
             <br>
@@ -124,6 +133,7 @@
       </div>
     </div>
   </footer>
+
   <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
