--- a/merit-dorm.html
+++ b/merit-dorm.html
@@ -96,18 +96,18 @@
             <span class="cursive larger">T</span>rust
           </div>
         </div>
-        <p class="bring-down">
+        <p>
           The Saint Dismas Foundation was the prime mover in the establishment of a special, safer, housing unit for those inmates who "merit" it. Inmates who have enrolled in and completed self-betterment programs, and have had no "DR's" (disciplinary reports) in a predetermined amount of time, are eligible to apply. As the sponsor St. Dismas agreed to fund the project.
         </p>
         <img src="images/inmate_praying.jpg" class="main-column-img center-block responsive" alt="Prisoner kneeling and praying in a prison chapel.">
       </div>
     </div>
   </div>
-  <footer class="">
+  <footer>
     <div class="container">
       <div class="row">
-        <div class="col-xs-4">
-          <p class="footer-left">
+        <div class="hidden-xs col-sm-4 col-md-4">
+          <p>
             Saint Dismas Prison Ministry Foundation
             <br> 1701 Indian Creek Parkway
             <br> Jupiter, Florida 33458
@@ -115,11 +115,20 @@
             <br>
           </p>
         </div>
-        <div class="col-xs-4 text-center">
-          <img src="images/logo_small.png" class="logo" alt="Saint Dismas Prison Ministry Logo" />
+        <div class="col-xs-12 visible-xs text-center">
+          <p>
+            Saint Dismas Prison Ministry Foundation
+            <br> 1701 Indian Creek Parkway
+            <br> Jupiter, Florida 33458
+            <br> 561-662-0832
+            <br>
+          </p>
         </div>
-        <div class="col-xs-4">
-          <p class="text-right footer-right">
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <p>
             Copyright &copy; 2015
             <br>
             <br>
