--- a/santa.html
+++ b/santa.html
@@ -95,10 +95,10 @@
           Children with a parent in jail or prison are teased more often at school. Some internalize the stigma and experience lower self-esteem, especially if they identify with the incarcerated parent. Others may react with anger, defiance, and a desire for retaliation against those who reject and taunt them.
         </p>
         <p>
-          The Saint Dismas Prison Ministry Foundation has a program called "SANTA IN PRISON." This program reaches out to the children of inmates who might not otherwise receive a gift for Christmas.
+          The Saint Dismas Prison Ministry Foundation has a program called <span class="cursive">SANTA IN PRISON</span>. This program reaches out to the children of inmates who might not otherwise receive a gift at Christmas.
         </p>
         <p>
-          On Christmas morning, when children come to the prison to visit their fathers, he or she receives a Christmas gift from Deacon Don and Pam Battiston, and from Deacon George and Judy Kinard, with the words, "Your Dad wanted you to have this for Christmas."
+          On Christmas morning, when children come to the prison to visit their fathers, he or she receives a Christmas gift personally, from Saint Dismas Board members or the prison Chaplains. Since 2006, Board members Deacon Don Battiston, and Deacon George Kinard and their wives, have distributed the gifts.
         </p>
         <img src="images/delivery.jpg" class="main-column-img center-block responsive" alt="Back of a van, doors flung open, and the inside is overflowing with presents. Two men stand on the side, smiling as they get ready to deliver presents to children.">
         <img src="images/toys.jpg" class="main-column-img center-block responsive" alt="Massive jumble of toys in all different types of containers and bags delivered to a needy home.">
@@ -106,11 +106,12 @@
       </div>
     </div>
   </div>
-  <footer class="">
+
+  <footer>
     <div class="container">
       <div class="row">
-        <div class="col-xs-4">
-          <p class="footer-left">
+        <div class="hidden-xs col-sm-4 col-md-4">
+          <p>
             Saint Dismas Prison Ministry Foundation
             <br> 1701 Indian Creek Parkway
             <br> Jupiter, Florida 33458
@@ -118,11 +119,20 @@
             <br>
           </p>
         </div>
-        <div class="col-xs-4 text-center">
-          <img src="images/logo_small.png" class="logo" alt="Saint Dismas Prison Ministry Logo" />
+        <div class="col-xs-12 visible-xs text-center">
+          <p>
+            Saint Dismas Prison Ministry Foundation
+            <br> 1701 Indian Creek Parkway
+            <br> Jupiter, Florida 33458
+            <br> 561-662-0832
+            <br>
+          </p>
         </div>
-        <div class="col-xs-4">
-          <p class="text-right footer-right">
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <p>
             Copyright &copy; 2015
             <br>
             <br>
@@ -132,6 +142,7 @@
       </div>
     </div>
   </footer>
+
   <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
