--- a/sports-equipment.html
+++ b/sports-equipment.html
@@ -88,17 +88,17 @@
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
         <h1 class="text-center ftg">Sports Equipment Program</h1>
         <p class="bring-down">
-          Recreation Yard equipment is not supplied by the Department of Corrections. Saint Dismas purchases footballs, soccer balls, basketballs, nets, rims, orange cones, colored pinneys, time clocks, stop watches, etc., and has them shipped from the supplier directly to the prison warehouse in care of the Prison Chaplain.
+          Recreation equipment is not supplied by the Department of Corrections. Saint Dismas Prison Ministry purchases footballs, soccer balls, basketballs, nets, rims, orange cones, colored pinneys, time clocks, stop watches, etc., and has them shipped from the supplier directly to the prison warehouse in care of the Prison Chaplain.	
         </p>
           <img src="images/sports.jpg" class="main-column-img center-block responsive" alt="Inmates jogging along a razor wire fence.">
       </div>
     </div>
   </div>
-  <footer class="">
+  <footer>
     <div class="container">
       <div class="row">
-        <div class="col-xs-4">
-          <p class="footer-left">
+        <div class="hidden-xs col-sm-4 col-md-4">
+          <p>
             Saint Dismas Prison Ministry Foundation
             <br> 1701 Indian Creek Parkway
             <br> Jupiter, Florida 33458
@@ -106,11 +106,20 @@
             <br>
           </p>
         </div>
-        <div class="col-xs-4 text-center">
-          <img src="images/logo_small.png" class="logo" alt="Saint Dismas Prison Ministry Logo" />
+        <div class="col-xs-12 visible-xs text-center">
+          <p>
+            Saint Dismas Prison Ministry Foundation
+            <br> 1701 Indian Creek Parkway
+            <br> Jupiter, Florida 33458
+            <br> 561-662-0832
+            <br>
+          </p>
         </div>
-        <div class="col-xs-4">
-          <p class="text-right footer-right">
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <p>
             Copyright &copy; 2015
             <br>
             <br>
