--- a/veteran-posts.html
+++ b/veteran-posts.html
@@ -70,7 +70,7 @@
       </div><!-- /.container-fluid -->
     </nav>
   </div>
-  
+
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12 col-sm-4 col-md-3">
@@ -90,16 +90,19 @@
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
         <h1 class="text-center ftg">Veteran Posts</h1>
         <p class="bring-down">
-          Saint Dismas sponsors the formation and operation of American Legion posts, acknowledging the positive contributions that inmate vets have made to this great country. We also pay the membership fees for indigent inmates who qualify to join the American Legion Post but can't afford to.
+          Saint Dismas sponsors the formation and operation of American Legion posts, acknowledging the positive contributions that inmate vets have made to this great country. Once again it is a program designed to promote the positive things a prison inmate has done in the past.
+        </p>
+        <p>
+          We also pay the membership fees for indigent inmates who qualify to join the American Legion Post but can't afford to. 
         </p>
       </div>
     </div>
   </div>
-  <footer class="">
+  <footer>
     <div class="container">
       <div class="row">
-        <div class="col-xs-4">
-          <p class="footer-left">
+        <div class="hidden-xs col-sm-4 col-md-4">
+          <p>
             Saint Dismas Prison Ministry Foundation
             <br> 1701 Indian Creek Parkway
             <br> Jupiter, Florida 33458
@@ -107,11 +110,20 @@
             <br>
           </p>
         </div>
-        <div class="col-xs-4 text-center">
-          <img src="images/logo_small.png" class="logo" alt="Saint Dismas Prison Ministry Logo" />
+        <div class="col-xs-12 visible-xs text-center">
+          <p>
+            Saint Dismas Prison Ministry Foundation
+            <br> 1701 Indian Creek Parkway
+            <br> Jupiter, Florida 33458
+            <br> 561-662-0832
+            <br>
+          </p>
         </div>
-        <div class="col-xs-4">
-          <p class="text-right footer-right">
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4 text-center">
+          <p>
             Copyright &copy; 2015
             <br>
             <br>
