Added a link to homepage on the logo in the footer.

--- a/cvli-license.html
+++ b/cvli-license.html
@@ -91,7 +91,7 @@
           The CVLI License, is a license which allows inmates in the prison chapels at Martin CI and Okeechobee CI to view Movies. The license is held by and paid for each year by The Saint Dismas Prison Ministry Foundation.
         </p>
         <p>
-          Through an agreement with studios and producers, the CVLI Church Video License provides legal coverage for churches and for other ministry organizations to show motion pictures and other audiovisual programs intended for personal, private use only (“Videos”). 
+          Through an agreement with studios and producers, the CVLI Church Video License provides legal coverage for churches and for other ministry organizations to show motion pictures and other audiovisual programs intended for personal, private use only (“Videos”).
         </p>
       </div>
     </div>
@@ -118,7 +118,7 @@
           </p>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4 text-center">
-          <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+          <a href="home.html"><img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" /></a>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4 text-center">
           <p>
