--- a/greeting-cards.html
+++ b/greeting-cards.html
@@ -91,7 +91,7 @@
           Prison inmates who are serving long sentences often lose family ties and meaningful friendships over the decades that they are incarcerated. Many never ever receive mail.
         </p>
         <p>
-          Recognizing the need to encourage communication and to help make it possible, the Saint Dismas Foundation was instrumental in starting a free greeting card program many years ago. Since it's inception well over 100,000 cards have been provided free to any inmate that requests them from the Chaplain. 
+          Recognizing the need to encourage communication and to help make it possible, the Saint Dismas Foundation was instrumental in starting a free greeting card program many years ago. Since it's inception well over 100,000 cards have been provided free to any inmate that requests them from the Chaplain.
         </p>
         <img src="images/prison-block.jpg" class="main-column-img center-block responsive" alt="Black and white image of long prison block, empty cells all along the sides.">
       </div>
@@ -119,7 +119,7 @@
           </p>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4 text-center">
-          <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+          <a href="home.html"><img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" /></a>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4 text-center">
           <p>
