--- a/literacy-program.html
+++ b/literacy-program.html
@@ -120,7 +120,7 @@
           </p>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4 text-center">
-          <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+          <a href="home.html"><img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" /></a>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4 text-center">
           <p>
