--- a/sports-equipment.html
+++ b/sports-equipment.html
@@ -88,7 +88,7 @@
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
         <h1 class="text-center ftg">Sports Equipment Program</h1>
         <p class="bring-down">
-          Recreation equipment is not supplied by the Department of Corrections. Saint Dismas Prison Ministry purchases footballs, soccer balls, basketballs, nets, rims, orange cones, colored pinneys, time clocks, stop watches, etc., and has them shipped from the supplier directly to the prison warehouse in care of the Prison Chaplain.	
+          Recreation equipment is not supplied by the Department of Corrections. Saint Dismas Prison Ministry purchases footballs, soccer balls, basketballs, nets, rims, orange cones, colored pinneys, time clocks, stop watches, etc., and has them shipped from the supplier directly to the prison warehouse in care of the Prison Chaplain.
         </p>
           <img src="images/sports.jpg" class="main-column-img center-block responsive" alt="Inmates jogging along a razor wire fence.">
       </div>
@@ -116,7 +116,7 @@
           </p>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4 text-center">
-          <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+          <a href="home.html"><img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" /></a>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4 text-center">
           <p>
