--- a/veteran-posts.html
+++ b/veteran-posts.html
@@ -93,7 +93,7 @@
           Saint Dismas sponsors the formation and operation of American Legion posts, acknowledging the positive contributions that inmate vets have made to this great country. Once again it is a program designed to promote the positive things a prison inmate has done in the past.
         </p>
         <p>
-          We also pay the membership fees for indigent inmates who qualify to join the American Legion Post but can't afford to. 
+          We also pay the membership fees for indigent inmates who qualify to join the American Legion Post but can't afford to.
         </p>
       </div>
     </div>
@@ -120,7 +120,7 @@
           </p>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4 text-center">
-          <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+          <a href="home.html"><img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" /></a>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4 text-center">
           <p>
