--- a/apiary.html
+++ b/apiary.html
@@ -88,7 +88,7 @@
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
         <h1 class="text-center ftg">Apiary Program (Bee Keeping)</h1>
         <p class="bring-down">
-          A re-entry program proposed by the Saint Dismas Foundation to teach inmates how to make a living in a $4 billion a year market. It is a direct benefit to the Farm program, increasing crop yields. We estimate 400 lbs. of honey in the first year. The  Foundation finances the project.	
+          A re-entry program proposed by the Saint Dismas Foundation to teach inmates how to make a living in a $4 billion a year market. It is a direct benefit to the Farm program, increasing crop yields. We estimate 400 lbs. of honey in the first year. The  Foundation finances the project.
         </p>
           <img src="images/beekeeper.jpg" class="main-column-img center-block responsive" alt="Person in bee keeper suit, holding a panel of bees making honey.">
       </div>
@@ -116,7 +116,7 @@
           </p>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4 text-center">
-          <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+          <a href="home.html"><img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" /></a>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4 text-center">
           <p>
