--- a/mandate.html
+++ b/mandate.html
@@ -120,7 +120,7 @@
           </p>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4 text-center">
-          <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
+          <a href="home.html"><img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" /></a>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4 text-center">
           <p>
@@ -133,7 +133,7 @@
       </div>
     </div>
   </footer>
-  
+
   <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
